# I-m-in-love-with-the-XML

./: .gitignore  CMakeLists.txt  README.md
c_files/: main.c  read_dtd.c
dtd_folder/c_files/: error_gestion.c  file_information.c  file_useful.c  main.c  read_dtd.c
dtd_folder/dtd_files/: myDtd.dtd
dtd_folder/h_files/: error_gestion.h  file_information.h  file_useful.h  read_dtd.h
h_files/: read_dtd.h
resources/: myDtd.dtd  myXml.xml  test.xml  test0_ERREUR.dtd  test0_OK.dtd  test1.xml  test1_ERREUR.dtd  test1_OK.dtd  test2.xml  test2_ERREUR.dtd  test2_OK.dtd  test3.xml  test3_ERREUR.dtd  test3_OK.dtd  test4.xml  test4_ERREUR.dtd  test4_OK.dtd  ui.glade
sources/c_files/: char_useful.c  error_gestion.c  file_information.c  file_useful.c  gtk_functions.c  launch_dtd.c  launch_verification.c  launch_xml.c  main.c  read_attribute.c  read_comment.c  read_dtd.c  read_xml.c  test.c  validation_dtd.c  xml_validation.c  xmlfile_read.c
sources/h_files/: char_useful.h  error_gestion.h  file_information.h  file_useful.h  gtk_functions.h  includes.h  launch_dtd.h  launch_verification.h  launch_xml.h  read_attribute.h  read_comment.h  read_dtd.h  read_xml.h  test.h  validation_dtd.h  xml_validation.h  xmlfile_read.h
